--- a/app/style/scss/mainPage.scss
+++ b/app/style/scss/mainPage.scss
@@ -183,10 +183,10 @@ body {
 
 .game-start {
   background-color: $logo-yellow;
-  border: 5px solid $logo-black;
+  border: 5px solid $blue;
   border-radius: 10px;
-  box-shadow: 5px 5px $logo-red;
-  color: $logo-black;
+  //box-shadow: 5px 5px $logo-red;
+  color: $white;
   cursor: pointer;
   font-size: 48px;
   outline: none;
